VNET/main.tf
resource "azurerm_resource_group" "project1" {
  name     = "project-resources"
  location = "West Europe"
}

resource "azurerm_network_security_group" "project" {
  name                = "project-security-group"
  location            = azurerm_resource_group.project1.location
  resource_group_name = azurerm_resource_group.project1.name
}

resource "azurerm_virtual_network" "project" {
  name                = "project-network"
  location            = azurerm_resource_group.project1.location
  resource_group_name = azurerm_resource_group.project1.name
  address_space       = ["10.0.0.0/16"]
  dns_servers         = ["10.0.0.4", "10.0.0.5"]

  subnet {
    name           = "subnet1"
    address_prefix = "10.0.1.0/24"
  }

  subnet {
    name           = "subnet2"
    address_prefix = "10.0.2.0/24"
    security_group = azurerm_network_security_group.project.id
  }


  subnet {
    name           = "subnet3"
    address_prefix = "10.0.3.0/24"
    security_group = azurerm_network_security_group.project.id
  }

  tags = {
    environment = "Production"
  }
}
